@@ -1060,6 +1060,11 @@
 									<goal>prepare-agent</goal>
 								</goals>
 								<phase>validate</phase>
+								<configuration>
+									 <includes>
+                                        <include>org.openmrs.*</include>
+                                    </includes>
+								</configuration>
 							</execution>
 						</executions>
 					</plugin>
@@ -1158,6 +1163,6 @@
 		<sonar.issuesReport.console.enable>true</sonar.issuesReport.console.enable>
 		<sonar.analysis.mode>incremental</sonar.analysis.mode>
 		
-		<argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m ${customArgLineForTesting}</argLine>
+		<argLine>-Duser.language=en -Duser.region=US -Xmx2g ${customArgLineForTesting}</argLine>
 	</properties>
 </project>
